@@ -44,7 +44,7 @@ void PrepareContents()
 void FillTable(transaction_base &T, string TableName)
 {
   tablewriter W(T, TableName);
-  W.reserve(Contents.size());
+  W.reserve(tablewriter::size_type(Contents.size()));
 
   copy(Contents.begin(), Contents.end(), back_inserter(W));
 
